--- a/index.html
+++ b/index.html
@@ -22,5 +22,9 @@
         
         <h6>Sixth Level Heading</h6>
         <p>This is some text.</p>
+
+        <a href="https://www.gwu.edu">
+            Visit GW!
+        </a>
     </body>
 </html>
