--- a/index.html
+++ b/index.html
@@ -26,5 +26,8 @@
         <a href="https://www.gwu.edu">
             Visit GW!
         </a>
+
+        <img src="DIVE.jpg" alt="Underwater Playground" width=100% height=100%>
+
     </body>
 </html>
