--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <p>This is some text.</p>
         
         <h6>Sixth Level Heading</h6>
-        <p>This is some text.</p>
+        <p>This is some text.
+            This is some more text.
+        </p>
 
         <a href="https://www.gwu.edu">
             Visit GW!
